@@ -9,7 +9,8 @@ Bug fixes:
 - Ensure that Score-P's compiler wrappers are not called recursively. This was
   possible as a result of  `scorep-nvcc` using a `scorep-*` host
   compiler wrapper.
-- scorep-score: fix event size estimation of I/O sync events
+- scorep-score: fix event size estimation of I/O sync events.
+- Allow for OpenMP tasks outside of an OpenMP parallel region.
 
 ------------------- Released version 7.0 -----------------------------
 
